--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-This is a heading
-This is a paragraph.
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Main Page</title>
+</head>
+<body>
+
+<h1>This is the header.</h1>
+<p>This is my first paragraph.</p>
+<p>This is my second paragraph.</p>
+
+</body>
+
+
+</html>
