CSS and Index updates

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Main Page</title>
+    <link rel="StyleSheet" type="text/css" href="StyleSheet.css">
 </head>
 <body>
 
 <h1>This is the header.</h1>
 <p>This is my first paragraph.</p>
 <p>This is my second paragraph.</p>
-    <p>This is my third paragraph.</p>
+    <p>This is my <em>third</em> paragraph.</p>
 
 </body>
 
